--- a/app/views/my-tasks-using-tl/claim-details/check-claim-details.html
+++ b/app/views/my-tasks-using-tl/claim-details/check-claim-details.html
@@ -90,7 +90,7 @@
             Assigned by
           </dt>
           <dd class="govuk-summary-list__value">
-            Self
+            Me
           </dd>
 
         </div>
@@ -99,7 +99,7 @@
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Perform a check to verify details of the disabled person, benefits and appointee as provided in the claim application
+            Perform a check and update ceased to care detials
           </dd>
 
         </div>
@@ -108,7 +108,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Low
+            Very high
           </dd>
 
         </div>
@@ -116,7 +116,7 @@
       </dl>
 
       <br>
-      <a href="bluezone-process"><button class="govuk-button" data-module="govuk-button">Start task </button></a>
+      <a href="bluezone-process-1"><button class="govuk-button" data-module="govuk-button">Start task </button></a>
 
       <br>      <br>
 
@@ -136,7 +136,7 @@
           <p class="dwp-timeline__info">
             <span class="govuk-visually-hidden visually-hidden">Task started</span>
             <span class="dwp-timeline__author">by John Smith</span>
-            <span class="dwp-timeline__date">1 January 2021 at 13:02</span>
+            <span class="dwp-timeline__date">5 January 2021 at 13:02</span>
           </p>
         </li>
 
@@ -145,7 +145,7 @@
           <p class="dwp-timeline__info">
             <span class="dwp-visually__hidden">Task abandoned</span>
             <span class="dwp-timeline__author">by John Smith</span>
-            <span class="dwp-timeline__date">1 January 2021 at 13:21</span>
+            <span class="dwp-timeline__date">6 January 2021 at 13:21</span>
           </p>
           <p class="dwp-timeline__body">
             Returned to system queue due to inactivity or no status update
@@ -153,6 +153,7 @@
         </li>
       </ol>
 
+      <p><a href="check-claim-details-history">View complete history</a></p>
 
 
     </div>
