--- a/app/views/my-tasks-using-tl/task-list-cancel-check-disabled-details.html
+++ b/app/views/my-tasks-using-tl/task-list-cancel-check-disabled-details.html
@@ -107,7 +107,7 @@
 
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="/my-tasks-using-tl/claim-details/check-claim-details">Update ceased to care details </a></td>
-            <td class="govuk-table__cell">Low</td>
+            <td class="govuk-table__cell">Very high</td>
             <td class="govuk-table__cell">12-01-2021</td>
             <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
 
