--- a/app/views/my-tasks/claim-details/i-cannot-do-this-task-2.html
+++ b/app/views/my-tasks/claim-details/i-cannot-do-this-task-2.html
@@ -124,7 +124,7 @@
         Task
       </dt>
       <dd class="govuk-summary-list__value">
-        Update ceased to care details 
+        Update ceased to care details
       </dd>
 
     </div>
@@ -153,7 +153,7 @@
         Assigned by
       </dt>
       <dd class="govuk-summary-list__value">
-        Self
+        Me
       </dd>
 
     </div>
@@ -162,7 +162,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Perform a check to verify details of the disabled person, benefits and appointee as provided in the claim application
+        Perform a check and update ceased to care detials
       </dd>
 
     </div>
@@ -171,7 +171,7 @@
         Priority
       </dt>
       <dd class="govuk-summary-list__value">
-        Low
+        Very high
       </dd>
 
     </div>
