--- a/app/views/my-tasks/task-list-new-tasks-added.html
+++ b/app/views/my-tasks/task-list-new-tasks-added.html
@@ -136,7 +136,7 @@
             <td class="govuk-table__cell"><a href="/my-tasks/claim-details/check-claim-details">Update ceased to care details </a></td>
             <td class="govuk-table__cell">CC346697E</td>
             <td class="govuk-table__cell">Me</td>
-            <td class="govuk-table__cell">Low</td>
+            <td class="govuk-table__cell">Very high</td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update employment status </a></td>
