--- a/app/views/my-tasks-using-tl/task-list-pause-update-care.html
+++ b/app/views/my-tasks-using-tl/task-list-pause-update-care.html
@@ -28,12 +28,12 @@
               My tasks
             </a>
           </li>
-
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
               My clearances
             </a>
           </li>
+
 
         </ul>
       </nav>
@@ -45,12 +45,10 @@
 </header>
 {% endblock %}
 
-
-
-
 {% block content %}
 
-<!-- Banner - Start -->
+
+
 <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
   <div class="govuk-notification-banner__header">
     <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
@@ -59,13 +57,12 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task escalated and removed from your list
+      Task parked and status changed to in progress
     </p>
-    <p class="govuk-body">Reason: {{ data['more-detail'] | default('No reason provided') }}</p>
+    <p class="govuk-body">Reason: {{ data['pause-this-task-care'] | default('No reason provided') }}</p>
   </div>
 </div>
 
-<!-- Banner - End -->
 <div class="govuk-grid-row">
 
   <div class="govuk-grid-column-two-thirds" style="width:65%;">
@@ -116,11 +113,18 @@
             <td class="govuk-table__cell"><a href="/my-tasks-using-tl/claim-details/check-claim-details">Update ceased to care details </a></td>
             <td class="govuk-table__cell">Very high</td>
             <td class="govuk-table__cell">12-01-2021</td>
-            <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
+            <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">in-progress</strong></td>
 
 
           </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell"><a href="/my-tasks-using-tl/in-progress/verify-non-employment">Check non-employment income</a></td>
+            <td class="govuk-table__cell">Low</td>
+            <td class="govuk-table__cell">13-01-2021</td>
+            <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">In progress</strong></td>
 
+
+          </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="/my-tasks-using-tl/address-verify/verify-addresses">Update dependent qualifying benefits</a></td>
             <td class="govuk-table__cell">Very high</td>
@@ -146,7 +150,7 @@
 
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="/my-tasks-using-tl/add-payment/add-payment">Add payment details</a></td>
+            <td class="govuk-table__cell"><a href="/my-tasks-using-tl/add-payment/add-payment-in-progress">Add payment details</a></td>
             <td class="govuk-table__cell">Medium</td>
             <td class="govuk-table__cell">15-01-2021</td>
             <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
@@ -221,6 +225,7 @@
     </div>
 
   </div>       <!-- End of main row -->
+
 
 
 {% endblock %}
