--- a/app/views/my-tasks/claim-details/pause-this-task.html
+++ b/app/views/my-tasks/claim-details/pause-this-task.html
@@ -52,13 +52,13 @@
       <nav>
         <ul id="navigation" class="govuk-header__navigation  " aria-label="Navigation menu">
           <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-            <a class="govuk-header__link" href="/my-tasks-using-tl/task-list">
+            <a class="govuk-header__link" href="/my-tasks/task-list">
               My tasks
             </a>
           </li>
 
           <li class="govuk-header__navigation-item ">
-            <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
+            <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
               My clearances
             </a>
           </li>
@@ -74,7 +74,7 @@
 
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/my-tasks-using-tl/claim-details/check-claim-details">Back</a>
+  <a class="govuk-back-link" href="/my-tasks/claim-details/bluezone-process-1">Back</a>
 {% endblock %}
 
 
@@ -121,20 +121,11 @@
   <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        Task
-      </dt>
-      <dd class="govuk-summary-list__value">
-        Update ceased to care details
-      </dd>
-
-    </div>
-    <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">
         Status
       </dt>
       <dd class="govuk-summary-list__value">
-        <strong class="govuk-tag govuk-tag--yellow">
-          Not started
+        <strong class="govuk-tag govuk-tag--grey">
+          To-do
         </strong>
       </dd>
 
@@ -186,11 +177,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">I can't do this task</h1>
+      <h1 class="govuk-heading-xl">Why do you want to parking this task?</h1>
 
-      <form class="form " name="reason-form-2" action="/my-tasks-using-tl/task-list-no-claim-details" onsubmit="return validateForm()" method="post">
+      <form class="form " name="reason-form-2" action="/my-tasks/task-list-pause-update-care" method="post">
 
-      <div class="govuk-form-group" id="reason-options-2">
+      <div class="govuk-form-group" id="reason-options-3">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <div id="contact-hint" class="govuk-hint">
             Select one option.
@@ -199,7 +190,7 @@
       <!-- Specific error block - Start -->
 
       <span id="no-reason-error-2" class="govuk-error-message govuk-radios__conditional--hidden">
-          <span class="govuk-visually-hidden">Error:</span> Select your reason for not doing this task
+          <span class="govuk-visually-hidden">Error:</span> Select your reason for parking this task
       </span>
 
       <!-- Specific error block - End -->
@@ -210,33 +201,24 @@
 
           <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task-2" type="radio" value="Not relevent to my skillset or training" data-aria-controls="reason-for-not-doing-task-1">
+              <input class="govuk-radios__input" id="reason-1" name="pause-this-task-care" type="radio" value="Unable to investigate and confirm now" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Not relevent to my skillset or training
+                Unable to investigate and confirm now
               </label>
             </div>
-
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-2" name="reason-for-not-doing-task-2" type="radio" value="Task does not have enough details to asses it’s complexity" data-aria-controls="reason-for-not-doing-task-2">
-              <label class="govuk-label govuk-radios__label" for="reason-2">
-                Not enough information to assess complexity of task
+              <input class="govuk-radios__input" id="reason-2" name="pause-this-task-care" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task-care">
+              <label class="govuk-label govuk-radios__label" for="reason-1">
+                Claimant didn't pick up the phone
               </label>
             </div>
-
-            <!-- <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-3" name="reason-for-not-doing-task-2" type="radio" value="Too complex to be finished in a work-day" data-aria-controls="reason-for-not-doing-task-3">
-              <label class="govuk-label govuk-radios__label" for=reason-3">
-                Too complex to be finished in a working day
-              </label>
-            </div> -->
-
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="reason-4" name="reason-for-not-doing-task-2" type="radio" value=" " data-aria-controls="reason-for-not-doing-task-4">
+              <input class="govuk-radios__input" id="reason-4" name="pause-this-task-care" type="radio" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-4">
                 Other reason
               </label>
             </div>
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="reason-for-not-doing-task-4">
+            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="pause-this-task-care">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="reason-5">
                   Enter your reason
@@ -244,12 +226,12 @@
 
                 <!-- Field Error - Start -->
                 <span id="no-reason-error-2-2" class="govuk-error-message govuk-radios__conditional--hidden">
-                    <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+                    <span class="govuk-visually-hidden">Error:</span>Enter your reason for parking this task
                 </span>
                 <!-- Field Error - End -->
 
 
-                <textarea class="govuk-textarea" id="other-reason-required-2" name="reason-for-not-doing-task-2" rows="5" aria-describedby="more-detail-hint"></textarea>
+                <textarea class="govuk-textarea" id="other-reason-required-2" name="pause-this-task-care" rows="5" aria-describedby="more-detail-hint"></textarea>
 
             </div>
           </div>
@@ -258,7 +240,7 @@
       </div>
 
 
-      <button class="govuk-button" data-module="govuk-button">Continue</button>
+      <button class="govuk-button" data-module="govuk-button">Park task</button>
 
       </form>
 
