--- a/app/views/my-tasks/task-list-pause-update-care.html
+++ b/app/views/my-tasks/task-list-pause-update-care.html
@@ -28,12 +28,12 @@
               My tasks
             </a>
           </li>
-
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
               My clearances
             </a>
           </li>
+
 
         </ul>
       </nav>
@@ -45,8 +45,9 @@
 </header>
 {% endblock %}
 
-
 {% block content %}
+
+
 
 <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
   <div class="govuk-notification-banner__header">
@@ -56,12 +57,11 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task removed from your list
+      Task parked and added to in progress
     </p>
-    <p class="govuk-body">Reason: {{ data['reason-for-not-doing-task'] | default('No reason provided') }}</p>
+    <p class="govuk-body">Reason: {{ data['pause-this-task-care'] | default('No reason provided') }}</p>
   </div>
 </div>
-
 
 <div class="govuk-grid-row">
 
@@ -84,10 +84,10 @@
         <nav class="navigation-secondary govuk-!-font-size-19">
           <ul>
             <li>
-              <a href="/my-tasks/task-list" class="active" aria-current="section">To-do</a>
+              <a href="/my-tasks/task-list"  aria-current="section">To-do</a>
             </li>
             <li>
-              <a href="/my-tasks/task-list-in-progress">In progress</a>
+              <a href="/my-tasks/task-list-in-progress" class="active">In progress</a>
             </li>
             <li>
               <a href="/my-tasks/task-list-assigned">Assigned to someone else</a>
@@ -107,69 +107,37 @@
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-!-width-one-half" style="width:55% !important;">Task</th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" style="width:17% !important;">Case number</th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" style="width:17% !important;">Assigned by</th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" style="width:10% !important;">Priority</th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-half" style="width:55% !important;" >Task</th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-half">Reason for parking</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Check claim details </a></td>
-            <td class="govuk-table__cell">AB121212C</td>
-            <td class="govuk-table__cell">Mary M</td>
-            <td class="govuk-table__cell">Medium</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <!-- <th scope="row" class="govuk-table__header">Total estimated pay</th> -->
-            <td class="govuk-table__cell"><a href="#">Update dependent details</a></td>
-            <td class="govuk-table__cell">AB121212C</td>
-            <td class="govuk-table__cell">System</td>
-            <td class="govuk-table__cell">Low</td>
-          </tr>
-          <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Check applicant and partner benefits  </a></td>
-            <td class="govuk-table__cell">BC324212D</td>
-            <td class="govuk-table__cell">James May</td>
-            <td class="govuk-table__cell">Very high</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="/my-tasks/claim-details/check-claim-details">Update ceased to care details </a></td>
-            <td class="govuk-table__cell">CC346697E</td>
-            <td class="govuk-table__cell">Me</td>
-            <td class="govuk-table__cell">Very high</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Update employment status </a></td>
-            <td class="govuk-table__cell">SS356656C</td>
-            <td class="govuk-table__cell">Andrew Smith</td>
-            <td class="govuk-table__cell">High</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Check breaks in care</a></td>
-            <td class="govuk-table__cell">OI126409C</td>
-            <td class="govuk-table__cell">System</td>
-            <td class="govuk-table__cell">High</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Update ceased to care details</a></td>
-            <td class="govuk-table__cell">LI547002R</td>
-            <td class="govuk-table__cell">Me</td>
-            <td class="govuk-table__cell">Very high</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Add payment details</a></td>
-            <td class="govuk-table__cell">CA21312E</td>
-            <td class="govuk-table__cell">System</td>
-            <td class="govuk-table__cell">Medium</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Update ceased to care details</a></td>
-            <td class="govuk-table__cell">LY124499K</td>
-            <td class="govuk-table__cell">Mark H</td>
-            <td class="govuk-table__cell">Low</td>
+            <td class="govuk-table__cell">No reason provided</td>
           </tr>
 
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell"><a href="/my-tasks/in-progress/verify-non-employment">Check non-employment income</a></td>
+              <td class="govuk-table__cell">No reason provided</td>
+            </tr>
+
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell"><a href="#">Update bank details </a></td>
+            <td class="govuk-table__cell">System error while adding details, will try tomorrow.</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell"><a href="/my-tasks/in-progress-2/check-disable-details">Check disabled person's details and appointee</a></td>
+            <td class="govuk-table__cell">Unknown CACS issue. Raised an issue ticket. </td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell"><a href="#">Update dependent qualifying benefits </a></td>
+            <td class="govuk-table__cell">No reason provided</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell"><a href="#">Update ceased to care details</a></td>
+            <td class="govuk-table__cell">{{ data['pause-this-task-care'] }}</td>
+          </tr>
         </tbody>
       </table>
       <!-- Table to hold list of tasks -- END -->
