--- a/lib/extensions/_extensions.scss
+++ b/lib/extensions/_extensions.scss
@@ -1,1 +1,1 @@
-$govuk-extensions-url-context: "/extension-assets"; @import "/Users/pablo.cabello/Documents/GitHub/rbc-cc-prototype/node_modules/govuk-frontend/govuk/all.scss";
+$govuk-extensions-url-context: "/extension-assets"; @import "/Users/sarat.kumar/Documents/prototypes/rbc-cc-prototype/node_modules/govuk-frontend/govuk/all.scss";
