More content tweaks

--- a/app/views/my-tasks-using-tl/add-payment/i-cannot-do-this-task-3.html
+++ b/app/views/my-tasks-using-tl/add-payment/i-cannot-do-this-task-3.html
@@ -87,7 +87,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#no-reason-error">Select your reason for not doing this task</a>
+        <a href="#no-reason-error">Select your reason for not doing task</a>
       </li>
     </ul>
   </div>
@@ -101,7 +101,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#other-reason-required">Enter your reason for not doing this task</a>
+        <a href="#other-reason-required">Enter your reason for not doing task</a>
       </li>
     </ul>
   </div>
@@ -135,7 +135,7 @@
         Case number
       </dt>
       <dd class="govuk-summary-list__value">
-        CA21312E
+        CA213121E
       </dd>
 
     </div>
@@ -153,7 +153,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Add new payment details to a claimant's account
+        Add new payment details to carer's account
       </dd>
 
     </div>
@@ -203,14 +203,14 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task-3" type="radio" value="Not relevent to my skillset or training" data-aria-controls="reason-for-not-doing-task-1">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Not relevent to my skillset or training
+                I don't have the experience or training
               </label>
             </div>
 
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-2" name="reason-for-not-doing-task-3" type="radio" value="Task does not have enough details to asses it’s complexity" data-aria-controls="reason-for-not-doing-task-2">
               <label class="govuk-label govuk-radios__label" for="reason-2">
-                Not enough information to assess complexity of task
+                I need more information to assess complexity of task
               </label>
             </div>
 
