--- a/app/views/my-tasks-using-tl/add-payment/pause-this-task.html
+++ b/app/views/my-tasks-using-tl/add-payment/pause-this-task.html
@@ -135,7 +135,7 @@
         Case number
       </dt>
       <dd class="govuk-summary-list__value">
-        CA21312E
+        CA213121E
       </dd>
 
     </div>
@@ -153,7 +153,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Add new payment details to a claimant's account
+        Add new payment details to carer's account
       </dd>
 
     </div>
@@ -177,7 +177,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Why do you want to parking this task?</h1>
+      <h1 class="govuk-heading-xl">Why do you want to park this task?</h1>
 
       <form class="form " name="reason-form-2" action="/my-tasks-using-tl/task-list-pause-add-payment" method="post">
 
@@ -209,7 +209,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-2" name="pause-this-task" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Claimant didn't pick up the phone
+                Claimant didn't answer phone
               </label>
             </div>
             <div class="govuk-radios__item">
@@ -240,7 +240,7 @@
       </div>
 
 
-      <button class="govuk-button" data-module="govuk-button">Park this task</button>
+      <button class="govuk-button" data-module="govuk-button">Park task</button>
 
       </form>
 
