--- a/app/views/my-tasks-using-tl/in-progress-2/check-disable-details.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/check-disable-details.html
@@ -92,7 +92,7 @@
             Case number
           </dt>
           <dd class="govuk-summary-list__value">
-            KR8738615R
+            KR873861R
           </dd>
 
         </div>
@@ -126,10 +126,10 @@
         <a href="cancel-this-task">Cancel task</a>
       </p>
       <p>
-        <a href="assign-this-task">Assign to team member</a>
+        <a href="assign-this-task">Assign task to team member</a>
       </p>
       <p>
-        <a href="escalate-this-task">Refer to decision maker or team leader</a>
+        <a href="escalate-this-task">Refer task to decision maker or team leader</a>
       </p>
 
     </div>
