--- a/app/views/my-tasks-using-tl/task-list-no-add-payment.html
+++ b/app/views/my-tasks-using-tl/task-list-no-add-payment.html
@@ -57,7 +57,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task removed from your list
+      Task removed from your task list
     </p>
     <p class="govuk-body">Reason: {{ data['reason-for-not-doing-task-3'] | default('No reason provided') }}</p>
   </div>
@@ -71,7 +71,7 @@
     </h1>
   </div>
   <div class="govuk-grid-column-one-thirds" >
-  <a href="add-new-tasks"><button class="govuk-button govuk-!-margin-left-9 " data-module="govuk-button" > Add new tasks to my to-do list </button></a>
+  <a href="add-new-tasks"><button class="govuk-button govuk-!-margin-left-9 " data-module="govuk-button" > Add new tasks to my task list </button></a>
 </div>
 </div>
 
