--- a/app/views/my-tasks-using-tl/in-progress-2/bluezone-process.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/bluezone-process.html
@@ -60,12 +60,12 @@
 
       <p>This shows the last saved page in the task completion process. <br><br> For example, this may be 'Bank or building society details' page in 'Start a paper claim' task.  </p>
       <br>
-      <p><strong>End of an task</strong><br> You may be directed to an 'end this task' page once the task is completed.
+      <p><strong>End of an task</strong><br> You may be directed to an 'End this task' page once the task is completed.
 
       <br>
       <br>
 
-      <a href="/my-tasks-using-tl/task-list">Go to tasks page </a></p>
+      <a href="/my-tasks-using-tl/task-list">Go to My tasks</a></p>
     </div>
   </div>
 
