--- a/app/views/my-tasks-using-tl/task-list-cancel-check-disabled-details.html
+++ b/app/views/my-tasks-using-tl/task-list-cancel-check-disabled-details.html
@@ -74,7 +74,7 @@
     </h1>
   </div>
   <div class="govuk-grid-column-one-thirds" >
-  <a href="add-new-tasks"><button class="govuk-button govuk-!-margin-left-9 " data-module="govuk-button" > Add new tasks to my to-do list </button></a>
+  <a href="add-new-tasks"><button class="govuk-button govuk-!-margin-left-9 " data-module="govuk-button" > Add new tasks to my task list </button></a>
 </div>
 </div>
 
