More content tweaks

--- a/app/views/my-tasks-using-tl/add-payment/add-payment.html
+++ b/app/views/my-tasks-using-tl/add-payment/add-payment.html
@@ -81,7 +81,7 @@
             Case number
           </dt>
           <dd class="govuk-summary-list__value">
-            CA21312E
+            CA213121E
           </dd>
 
         </div>
@@ -99,7 +99,7 @@
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Add new payment details to a claimant's account
+            Add new payment details to carer's account
           </dd>
 
         </div>
