--- a/app/views/my-tasks-using-tl/add-payment/i-cannot-do-this-task-3.html
+++ b/app/views/my-tasks-using-tl/add-payment/i-cannot-do-this-task-3.html
@@ -177,7 +177,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">I can't do this task</h1>
+      <h1 class="govuk-heading-xl">Why can't you do this task?</h1>
 
       <form class="form " name="reason-form-2" action="/my-tasks-using-tl/task-list-no-add-payment" onsubmit="return validateForm()" method="post">
 
@@ -203,7 +203,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task-3" type="radio" value="Not relevent to my skillset or training" data-aria-controls="reason-for-not-doing-task-1">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                I don't have the experience or training
+                I don't have the right experience or training
               </label>
             </div>
 
