--- a/app/views/my-tasks-using-tl/claim-details/i-cannot-do-this-task-2.html
+++ b/app/views/my-tasks-using-tl/claim-details/i-cannot-do-this-task-2.html
@@ -162,7 +162,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Perform a check and update ceased to care detials
+        Check and update ceased to care detials
       </dd>
 
     </div>
@@ -212,14 +212,14 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task-2" type="radio" value="Not relevent to my skillset or training" data-aria-controls="reason-for-not-doing-task-1">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Not relevent to my skillset or training
+                I don't have the right experience or training
               </label>
             </div>
 
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-2" name="reason-for-not-doing-task-2" type="radio" value="Task does not have enough details to asses it’s complexity" data-aria-controls="reason-for-not-doing-task-2">
               <label class="govuk-label govuk-radios__label" for="reason-2">
-                Not enough information to assess complexity of task
+                I don't have enough information to assess complexity of task
               </label>
             </div>
 
