Even more content tweaks

--- a/app/views/my-tasks/add-payment/i-cannot-do-this-task-3.html
+++ b/app/views/my-tasks/add-payment/i-cannot-do-this-task-3.html
@@ -135,7 +135,7 @@
         Case number
       </dt>
       <dd class="govuk-summary-list__value">
-        CA21312E
+        CA213121E
       </dd>
 
     </div>
@@ -153,7 +153,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Add new payment details to a claimant's account
+        Add new payment details to carer's account
       </dd>
 
     </div>
@@ -177,7 +177,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">I can't do this task</h1>
+      <h1 class="govuk-heading-xl">Why can't you do this task?</h1>
 
       <form class="form " name="reason-form-2" action="/my-tasks/task-list-no-add-payment" onsubmit="return validateForm()" method="post">
 
@@ -190,7 +190,7 @@
       <!-- Specific error block - Start -->
 
       <span id="no-reason-error-2" class="govuk-error-message govuk-radios__conditional--hidden">
-          <span class="govuk-visually-hidden">Error:</span> Select your reason for not doing this task
+          <span class="govuk-visually-hidden">Error:</span> Select reason for not doing task
       </span>
 
       <!-- Specific error block - End -->
@@ -230,7 +230,7 @@
 
                 <!-- Field Error - Start -->
                 <span id="no-reason-error-2-2" class="govuk-error-message govuk-radios__conditional--hidden">
-                    <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+                    <span class="govuk-visually-hidden">Error:</span>Enter reason for not doing task
                 </span>
                 <!-- Field Error - End -->
 
