--- a/app/views/my-tasks/claim-details/pause-this-task.html
+++ b/app/views/my-tasks/claim-details/pause-this-task.html
@@ -177,7 +177,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Why do you want to parking this task?</h1>
+      <h1 class="govuk-heading-xl">Why do you want to park this task?</h1>
 
       <form class="form " name="reason-form-2" action="/my-tasks/task-list-pause-update-care" method="post">
 
@@ -209,7 +209,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-2" name="pause-this-task-care" type="radio" value="Claimant didn't pick up the phone" data-aria-controls="pause-this-task-care">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Claimant didn't pick up the phone
+                Claimant didn't answer the phone
               </label>
             </div>
             <div class="govuk-radios__item">
