--- a/app/views/my-tasks/claim-details/check-claim-details.html
+++ b/app/views/my-tasks/claim-details/check-claim-details.html
@@ -120,7 +120,7 @@
 
       <br>      <br>
 
-      <p><a href="i-cannot-do-this-task-2">I can't do this task</a></p>
+      <p><a href="i-cannot-do-this-task-2">I cannot do this task</a></p>
     </div>
 
     <!--  Task history </p> -->
