--- a/app/views/my-tasks/in-progress/bluezone-process.html
+++ b/app/views/my-tasks/in-progress/bluezone-process.html
@@ -60,12 +60,13 @@
 
       <p>This shows the last saved page in the task completion process. <br><br> For example, this may be 'Bank or building society details' page in 'Start a paper claim' task.  </p>
       <br>
-      <p><strong>End of an task</strong><br> You may be directed to an 'end this task' page once the task is completed.
+      <p><strong>End of an task</strong></p>
+
+      <p>You may be directed to an 'end this task' page once the task is completed.</p>
 
       <br>
-      <br>
 
-      <a href="/my-tasks/task-list">Go to tasks page </a></p>
+      <p><a href="/my-tasks/task-list">Go to My tasks page </a></p>
     </div>
   </div>
 
