--- a/app/views/my-tasks/in-progress/verify-non-employment.html
+++ b/app/views/my-tasks/in-progress/verify-non-employment.html
@@ -30,7 +30,7 @@
 
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
-              My clearnaces
+              My clearances
             </a>
           </li>
 
@@ -109,7 +109,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -125,10 +125,10 @@
         <a href="cancel-this-task">Cancel task</a>
       </p>
       <p>
-        <a href="assign-this-task">Assign to team member</a>
+        <a href="assign-this-task">Assign task to team member</a>
       </p>
       <p>
-        <a href="escalate-this-task">Refer to decision maker or team leader</a>
+        <a href="escalate-this-task">Refer task to decision maker or team leader</a>
       </p>
 
     </div>
