--- a/app/views/my-tasks/add-payment/add-payment.html
+++ b/app/views/my-tasks/add-payment/add-payment.html
@@ -120,7 +120,7 @@
 
       <br>      <br>
 
-      <p><a href="i-cannot-do-this-task-3">I can't do this task</a></p>
+      <p><a href="i-cannot-do-this-task-3">I cannot do this task</a></p>
     </div>
 
 
