--- a/app/views/my-tasks/in-progress-2/bluezone-process.html
+++ b/app/views/my-tasks/in-progress-2/bluezone-process.html
@@ -58,14 +58,18 @@
         Task page
       </h1>
 
-      <p>This shows the last saved page in the task completion process. <br><br> For example, this may be 'Bank or building society details' page in 'Start a paper claim' task.  </p>
+      <p>This shows the last saved page in the task completion process. <br><br> For example, this may be <thead>
+
+      </thead> 'Bank or building society details' page in 'Start a paper claim' task.  </p>
       <br>
-      <p><strong>End of an task</strong><br> You may be directed to an 'end this task' page once the task is completed.
+      <p><strong>End of task</strong></p>
+
+        <p>You may be directed to an 'end this task' page once the task is completed.</p>
 
       <br>
       <br>
 
-      <a href="/my-tasks/task-list">Go to tasks page </a></p>
+      <p><a href="/my-tasks/task-list">Go to My tasks page </a></p>
     </div>
   </div>
 
