--- a/app/views/my-tasks/in-progress-2/check-disable-details.html
+++ b/app/views/my-tasks/in-progress-2/check-disable-details.html
@@ -30,7 +30,7 @@
 
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks/statistics/statistics">
-              My clearnaces
+              My clearances
             </a>
           </li>
 
@@ -92,7 +92,7 @@
             Case number
           </dt>
           <dd class="govuk-summary-list__value">
-            KR8738615R
+            KR873861R
           </dd>
 
         </div>
@@ -110,7 +110,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -126,10 +126,10 @@
         <a href="cancel-this-task">Cancel task</a>
       </p>
       <p>
-        <a href="assign-this-task">Assign to team member</a>
+        <a href="assign-this-task">Assign task to team member</a>
       </p>
       <p>
-        <a href="escalate-this-task">Refer to decision maker or team leader</a>
+        <a href="escalate-this-task">Refer task to decision maker or team leader</a>
       </p>
 
     </div>
