--- a/app/views/my-tasks/address-verify/i-cannot-do-this-task.html
+++ b/app/views/my-tasks/address-verify/i-cannot-do-this-task.html
@@ -171,7 +171,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Check & verify all the carer details and benefits
+        Check and verify all carer details and benefits
       </dd>
     </div>
     <div class="govuk-summary-list__row">
@@ -194,7 +194,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">I can't do this task</h1>
+      <h1 class="govuk-heading-xl">Why can't you do this task?</h1>
 
       <form class="form " name="reason-form" action="/my-tasks/task-list-no-verify-address" onsubmit="return validateForm()" method="post">
 
@@ -220,7 +220,7 @@
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="reason-1" name="reason-for-not-doing-task" type="radio" value="Not relevent to my skillset or training" data-aria-controls="reason-for-not-doing-task-1">
               <label class="govuk-label govuk-radios__label" for="reason-1">
-                Not relevent to my skillset or training
+                I don't have the right experience or training
               </label>
             </div>
 
