--- a/app/views/my-tasks/address-verify/verify-addresses.html
+++ b/app/views/my-tasks/address-verify/verify-addresses.html
@@ -118,7 +118,7 @@
       <br>      <br>
 
     <!--   <p class="govuk-body govuk-!-font-weight-bold">Other actions</p> -->
-      <p><a href="i-cannot-do-this-task">I can't do this task</a></p>
+      <p><a href="i-cannot-do-this-task">I cannot do this task</a></p>
 
     </div>
 
