--- a/app/views/my-tasks/in-progress-2/escalate-this-task.html
+++ b/app/views/my-tasks/in-progress-2/escalate-this-task.html
@@ -125,10 +125,10 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#more-notes-text">Enter your notes for this task</a>
+        <a href="#more-notes-text">Enter notes for this task</a>
       </li>
       <li>
-        <a href="#more-details">Enter your reason for not doing this task</a>
+        <a href="#more-details">Enter reason for not doing this task</a>
       </li>
     </ul>
   </div>
@@ -143,7 +143,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#more-notes-text">Enter your notes for this task</a>
+        <a href="#more-notes-text">Enter notes for this task</a>
       </li>
 
     </ul>
@@ -159,7 +159,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#more-details">Enter your reason for not doing this task</a>
+        <a href="#more-details">Enter reason for not doing this task</a>
       </li>
 
     </ul>
@@ -178,7 +178,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Refer to a decision maker or team leader
+        Refer task to decision maker or team leader
       </h1>
 
 
@@ -222,7 +222,7 @@
             Case number
           </dt>
           <dd class="govuk-summary-list__value">
-            KR8738615R
+            KR873861R
           </dd>
 
         </div>
@@ -240,7 +240,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -252,26 +252,25 @@
 
       <br>
       <br>
-      <h2 class="govuk-heading-m">Select referance level, priority and add notes</h2>
+      <h2 class="govuk-heading-m">Select reference level, priority and add notes</h2>
 
       <form class="form" name="reason-for-escalate" action="escalate-confirm-answers" onsubmit="return validateForm()" method="post">
 
         <div class="govuk-form-group">
 
         <label class="govuk-label" for="escalate-level">
-          Select the level
+          Select decision maker or team leader
         </label>
 
         <!-- Field Error - Start -->
         <span id="escalate-level-error" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+            <span class="govuk-visually-hidden">Error:</span>Enter reason for not doing task
         </span>
         <!-- Field Error - End -->
 
         <select id="escalate-level-select" class="govuk-select" name="escalate-level" value="" >
-          <option value="Agent- Team leader" selected>Agent- Team leader</option>
-          <option value="Decision maker - Agent" >Decision maker - Agent</option>
-          <option value="Decision maker - Team leader" >Decision maker - Team leader</option>
+          <option value="Decision maker - Agent" >Decision maker</option>
+          <option value="Decision maker - Team leader" >Team leader</option>
         </select>
         </div>
 
@@ -284,7 +283,7 @@
 
         <!-- Field Error - Start -->
         <span id="priority-level" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+            <span class="govuk-visually-hidden">Error:</span>Enter reason for not doing task
         </span>
         <!-- Field Error - End -->
 
@@ -300,12 +299,12 @@
       <!-- Notes -->
       <div class="govuk-form-group" id="more-notes-section">
         <label class="govuk-label" for="escalate-notes">
-          Notes
+          Add notes
         </label>
 
         <!-- Field Error - Start -->
         <span id="more-notes-text" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your notes for this task
+            <span class="govuk-visually-hidden">Error:</span>Enter notes for this task
         </span>
         <!-- Field Error - End -->
 
@@ -317,12 +316,12 @@
       <div class="govuk-form-group" id="more-details">
 
         <label class="govuk-label" for="more-detail">
-          Enter the reason why you want to refer this task
+          Enter why you want to refer this task
         </label>
 
         <!-- Field Error - Start -->
         <span id="reason-to-escalate-text" class="govuk-error-message govuk-radios__conditional--hidden">
-            <span class="govuk-visually-hidden">Error:</span>Enter your reason for not doing this task
+            <span class="govuk-visually-hidden">Error:</span>Enter reason for not doing task
         </span>
         <!-- Field Error - End -->
 
@@ -331,7 +330,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="contact" name="contact" type="checkbox" value="email" data-aria-controls="conditional-contact">
         <label class="govuk-label govuk-checkboxes__label" for="contact">
-          Add to 'Assigned by me' to follow this task's progress.
+          Add to 'Assigned by me' list to follow progress of task.
         </label>
       </div>
 
