--- a/app/views/my-tasks-using-tl/claim-details/i-cannot-do-this-task-2.html
+++ b/app/views/my-tasks-using-tl/claim-details/i-cannot-do-this-task-2.html
@@ -162,7 +162,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Check and update ceased to care detials
+        Check and update ceased to care details
       </dd>
 
     </div>
@@ -186,7 +186,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">I can't do this task</h1>
+      <h1 class="govuk-heading-xl">Why can't you do this task?</h1>
 
       <form class="form " name="reason-form-2" action="/my-tasks-using-tl/task-list-no-claim-details" onsubmit="return validateForm()" method="post">
 
