--- a/app/views/my-tasks-using-tl/claim-details/i-cannot-do-this-task-2.html
+++ b/app/views/my-tasks-using-tl/claim-details/i-cannot-do-this-task-2.html
@@ -87,7 +87,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#no-reason-error">Select your reason for not doing this task</a>
+        <a href="#no-reason-error">Select reason for not doing task</a>
       </li>
     </ul>
   </div>
@@ -101,7 +101,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#other-reason-required">Enter your reason for not doing this task</a>
+        <a href="#other-reason-required">Enter reason for not doing task</a>
       </li>
     </ul>
   </div>
@@ -199,7 +199,7 @@
       <!-- Specific error block - Start -->
 
       <span id="no-reason-error-2" class="govuk-error-message govuk-radios__conditional--hidden">
-          <span class="govuk-visually-hidden">Error:</span> Select your reason for not doing this task
+          <span class="govuk-visually-hidden">Error:</span> Select reason for not doing task
       </span>
 
       <!-- Specific error block - End -->
