--- a/app/views/my-tasks/add-payment/bluezone-process-confirm-answers.html
+++ b/app/views/my-tasks/add-payment/bluezone-process-confirm-answers.html
@@ -61,7 +61,7 @@
       <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Name of the account holder
+            Name of account holder
           </dt>
           <dd class="govuk-summary-list__value">{{data['name-on-the-account'] }}</dd>
           <dd class="govuk-summary-list__actions">
@@ -74,7 +74,7 @@
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Full name of bank or building society
+            Name of bank or building society
           </dt>
           <dd class="govuk-summary-list__value">{{ data['account-name'] }}</dd>
           <dd class="govuk-summary-list__actions">
