--- a/app/views/my-tasks/claim-details/check-claim-details.html
+++ b/app/views/my-tasks/claim-details/check-claim-details.html
@@ -99,7 +99,7 @@
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Perform a check and update ceased to care detials
+            Check and update ceased to care details
           </dd>
 
         </div>
