--- a/app/views/my-tasks/claim-details/bluezone-process-1.html
+++ b/app/views/my-tasks/claim-details/bluezone-process-1.html
@@ -87,7 +87,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#no-reason-error">Select an option</a>
+        <a href="#no-reason-error">Select option</a>
       </li>
     </ul>
   </div>
@@ -101,7 +101,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#other-reason-required">Enter your notes</a>
+        <a href="#other-reason-required">Enter notes</a>
       </li>
     </ul>
   </div>
@@ -124,7 +124,7 @@
 <dl class="govuk-summary-list">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key" style="width:60%;">
-      Name of the person being cared for
+      Name of person being cared for
     </dt>
     <dd class="govuk-summary-list__value">
       Morris Watsica
@@ -151,7 +151,7 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Carer lives at the same address?
+      Carer lives at same address?
     </dt>
     <dd class="govuk-summary-list__value">
       Yes
@@ -160,7 +160,7 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Started caring for the person (for 35 hours a week or more)
+      Started caring for person (for 35 hours a week or more)
     </dt>
     <dd class="govuk-summary-list__value">
       22 December 2020
