--- a/app/views/my-tasks/claim-details/pause-this-task.html
+++ b/app/views/my-tasks/claim-details/pause-this-task.html
@@ -153,7 +153,7 @@
         Description
       </dt>
       <dd class="govuk-summary-list__value">
-        Perform a check and update ceased to care detials
+        Check and update ceased to care details
       </dd>
 
     </div>
@@ -221,12 +221,12 @@
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="pause-this-task-care">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="reason-5">
-                  Enter your reason
+                  Enter reason
                 </label>
 
                 <!-- Field Error - Start -->
                 <span id="no-reason-error-2-2" class="govuk-error-message govuk-radios__conditional--hidden">
-                    <span class="govuk-visually-hidden">Error:</span>Enter your reason for parking this task
+                    <span class="govuk-visually-hidden">Error:</span>Enter reason for parking task
                 </span>
                 <!-- Field Error - End -->
 
